[gd_scene load_steps=14 format=2]

[ext_resource path="res://menue/asset/gandalf.png" type="Texture" id=1]
[ext_resource path="res://menue/Control.gd" type="Script" id=2]
[ext_resource path="res://menue/asset/asset_button clicked.png" type="Texture" id=3]
[ext_resource path="res://menue/asset/asset_button disabled.png" type="Texture" id=4]
[ext_resource path="res://menue/asset/asset_button normal.png" type="Texture" id=5]
[ext_resource path="res://menue/asset/asset_button marked.png" type="Texture" id=6]
[ext_resource path="res://menue/asset/asset_button hover.png" type="Texture" id=7]
[ext_resource path="res://menue/asset/menuefont.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 34
outline_size = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 19
outline_size = 1
font_data = ExtResource( 8 )

[node name="mainmenue" type="Node2D"]

[node name="gandalf" type="Sprite" parent="."]
self_modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
position = Vector2( 537.416, 304.464 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1023.0
margin_bottom = 602.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="createLobbyButton" type="TextureButton" parent="Control"]
margin_left = 49.9467
margin_top = 29.7302
margin_right = 97.9467
margin_bottom = 45.7302
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="createLobbyButtonLabel" type="Label" parent="Control"]
margin_left = 62.0
margin_top = 55.0
margin_right = 326.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "Create Lobby"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyCodeLabel" type="Label" parent="Control" groups=["lobbyCodeLabel"]]
margin_top = 148.0
margin_right = 1024.0
margin_bottom = 192.0
text = "XXXXX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobbyEntry" type="LineEdit" parent="Control"]
margin_left = 85.0
margin_top = 208.0
margin_right = 311.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "XXXXX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statusLabel" type="Label" parent="Control" groups=["errorStatusLabel"]]
margin_top = 407.0
margin_right = 1023.0
margin_bottom = 601.0
text = "Create a lobby or join a lobby to start play."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/createLobbyButton" to="Control" method="_on_createLobbyButton_pressed"]
[connection signal="focus_exited" from="Control/lobbyEntry" to="Control" method="_on_lobbyEntry_focus_exited"]
[connection signal="pressed" from="Control/joinLobbyButton" to="Control" method="_on_joinLobbyButton_pressed"]
